--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div class="upper_menu_button" data-menu="lab3">
         Лабораторна робота №3
     </div>
+    <div class="upper_menu_button" data-menu="lab4">
+        Лабораторна робота №4
+    </div>
 </div>
 <div class="wrapper">
     <div id="side_menu_lab1" class="side_menu side_menu--active">
@@ -80,6 +83,35 @@
         </div>
         <div class="side_menu_button" data-filename="lab3/report/variant_layout_report.html">
             Розмітка сторінки за допомогою плаваючих блоків
+        </div>
+    </div>
+    <div id="side_menu_lab4" class="side_menu">
+        <div class="side_menu_button" data-filename="lab4/report/goal_lab4.html">
+            Постановка задачі лабораторної роботи №4
+        </div>
+        <div class="side_menu_button" data-filename="lab4/report/ways_to_use.html">
+            Способи функціонально застосування JavaScript
+        </div>
+        <div class="side_menu_button" data-filename="lab4/report/url.html">
+            Система URL
+        </div>
+        <div class="side_menu_button" data-filename="lab4/report/event_handler.html">
+            Обробник подій
+        </div>
+        <div class="side_menu_button" data-filename="lab4/report/substitution.html">
+            Підстановка
+        </div>
+        <div class="side_menu_button" data-filename="lab4/report/insertion.html">
+            Вставка (тег SCRIPT)
+        </div>
+        <div class="side_menu_button" data-filename="lab4/report/forth_task.html">
+            Масиви (4 пункт)
+        </div>
+        <div class="side_menu_button" data-filename="lab4/report/sixth_task.html">
+            6 пункт
+        </div>
+        <div class="side_menu_button" data-filename="lab4/report/conclusion.html">
+            Висновки
         </div>
     </div>
     <div id="content" class="show_field">
