--- a/lab4/report/sixth_task.html
+++ b/lab4/report/sixth_task.html
@@ -1,3 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>6 завдання</title>
+</head>
+<body>
+<h3>Пащенко Ілля</h3>
+<a href="./lab4/pash/task6.html">Посилання до сторінки</a>
+<img src="./lab4/report/images/pash_task6.png" style="width: 50%">
+<h3>HTML</h3>
+<pre>
+<code>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;title&gt;Task 6&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+
+Ім'я *&lt;br&gt;
+&lt;input id="input_name" type="text"&gt; &lt;br&gt;
+Прізвище *&lt;br&gt;
+&lt;input id="input_surname" type="text"&gt; &lt;br&gt;
+Вік &lt;br&gt;
+&lt;input id="input_age" type="number"&gt; &lt;br&gt;
+Дата народження *&lt;br&gt;
+&lt;input id="input_date" type="date"&gt; &lt;br&gt;
+Пароль *&lt;br&gt;
+&lt;input id="input_password" type="password"&gt; &lt;br&gt;
+Підтвердження паролю *&lt;br&gt;
+&lt;input id="input_password_confirm" type="password"&gt; &lt;br&gt;
+&lt;input id="confirm_button" type="button" value="Зарєєструватися"&gt;
+&lt;div id="output_div"&gt;&lt;/div&gt;
+
+&lt;script src="task6script.js"&gt;&lt;/script&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</code>
+</pre>
+<h3>JS</h3>
+<pre>
+<code>
 let name = document.getElementById("input_name");
 let surname = document.getElementById("input_surname");
 let age = document.getElementById("input_age");
@@ -30,3 +74,8 @@ button.addEventListener("click", function () {
     }
     output_div.textContent += array.join(", ");
 });
+</code>
+</pre>
+<h3>Арсенюк Дмитро</h3>
+</body>
+</html>
