--- a/lab4/report/insertion.html
+++ b/lab4/report/insertion.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Task 1</title>
+    <title>Вставка</title>
 </head>
 <body>
-
-<input type="text" id="input" style="width: 600px">
-<div id="result_feed">
-
-</div>
-<script>
-    let text = "clear"
+<h3>Вставка (тег Script)</h3>
+<p>Скрипт на мові JavaScript вставлений в HTML тегом &lt;script&gt;</p>
+<pre>
+<code>
+&lt;script&gt;
     let input_text = document.getElementById("input");
     let result = document.getElementById("result_feed")
     input_text.addEventListener("keyup", function () {
@@ -27,6 +25,8 @@
     });
 
     document.body.insertBefore(ref, result)
-</script>
+&lt;/script&gt;
+</code>
+</pre>
 </body>
 </html>
