--- a/lab4/ars/task4.html
+++ b/lab4/ars/task4.html
@@ -7,10 +7,28 @@
 <body>
 <p>Введіть розмір масиву</p>
 <input id="input" type="text">
-<input id="confirm_bt" type="button" value="Confirm">
+<input id="confirm_bt" type="button" value="Підтвердити">
 <div id="result">
 </div>
 
 <script src="task4script.js"></script>
 </body>
 </html>
+<ul class="menu">
+    <li><a href="#">A</a></li>
+    <li><a href="#">B</a></li>
+    <li><a href="#">C</a>
+        <ul>
+            <li><a href="#">Sub Nav Link</a></li>
+            <li><a href="#">Sub Nav Link</a>
+                <ul>
+                    <li><a href="#">Sub Sub Nav Link</a></li>
+                    <li><a href="#">Sub Sub Nav Link</a></li>
+                    <li><a href="#">Sub Sub Nav Link</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Sub Nav Link</a></li>
+            <li><a href="#">Sub Nav Link</a></li>
+        </ul>
+    </li>
+</ul>
