--- a/lab4/report/goal_lab4.html
+++ b/lab4/report/goal_lab4.html
@@ -5,6 +5,11 @@
     <title>Постановка задачі лабораторної роботи №4</title>
 </head>
 <body>
+<h3>Тема: Функціональне застосування JavaScript У HTML-документі.
+    Класи, об'єкти, функції в мові JavaScript. Події та обробка подій.
+    Програмна взаємодія з HTML документами на основі DOM АРІ.
+</h3>
+
 <h3>Мета</h3>
 <p>
     Придбати практичні навички роботи маніпулювання інформаційним вмістом Web-документа засобами мови JavaScript, використання об'єктів, масивів, функцій, подій, обробників подій у сценаріях на мові JavaScript
@@ -23,7 +28,7 @@
     <li>Розмістити результат виконання  та програмний код 4 пункту у звітному HTML-документі.</li>
     <li>Забезпечити виконання завдання згідно із варіантом (Таблиця №2), сформувати необхідні дані, вбудовані у програму, у вигляді масивів, виконати тестування програми.</li>
 </ul>
-<h3>Завдання Арсенюка Димитра</h3>
+<h3>Завдання Арсенюка Дмитра</h3>
 <p>
     1. Створити одновимірний массив, кількість елементів якого задана користувачем. Знайти суму елементів з парними індексами, добуток від’ємних елементів, максимальний елемент та його індекс серед додатних чисел, мінімальний елемент та його індекс серед елементів зх непарними індексами.
     Упорядкувати масив у порядку зростання, Надрукувати вхідний та вихідний масив.
