--- a/lab5/7Task.html
+++ b/lab5/7Task.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title> 7 Завдання</title>
-    <script src="plugin_vide/jquery.vide.min.js"></script>
+    <script src="covervid-gh-pages/covervid.min.js"></script>
+    <style>
+        .covervid-wrapper {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+    </style>
     <script src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"> </script>
     <script src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"> </script>
 </head>
 <body>
-<div id="Vid" style="width: 1000px; height: 500px;"
+<div id="Vid" style="width: 100%; height: 300px;"
      data-vide-bg="mp4: images/video7Task.mp4, poster: images/video7Task.png">
 </div>
-<script>
-    $('#Vid').vide('images/video7Task');
-</script>
+<div class="covervid-wrapper">
+    <video class="covervid-video" autoplay="autoplay"  loop poster="images/video7Task.png">
+        <source src="images/video7Task.mp4" type="video/mp4">
+    </video>
+</div>
 </body>
 </html>
