--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="upper_menu_button" data-menu="lab4">
         Лабораторна робота №4
     </div>
+    <div class="upper_menu_button" data-menu="lab5">
+        Лабораторна робота №5
+    </div>
 </div>
 <div class="wrapper">
     <div id="side_menu_lab1" class="side_menu side_menu--active">
@@ -113,6 +116,36 @@
         <div class="side_menu_button" data-filename="lab4/report/conclusion.html">
             Висновки
         </div>
+    </div>
+    <div id="side_menu_lab5" class="side_menu">
+        <div class="side_menu_button" data-filename="lab5/report/goal_lab5.html">
+            Тема та постановка задачі лабораторної роботи №5
+        </div>
+        <div class="side_menu_button" data-filename="lab5/report/dynamic_3.html">
+            Динамічні елементи 3 пункту
+        </div>
+        <div class="side_menu_button" data-filename="./empty.html">
+            Галерея UniteGallery
+        </div>
+        <div class="side_menu_button" data-filename="lab5/report/photo_gallery_report.html">
+            Фотогалерея
+        </div>
+        <div class="side_menu_button" data-filename="lab5/report/photo_slider_report.html">
+            Слайдер фотографій
+        </div>
+        <div class="side_menu_button" data-filename="lab5/report/video_slider_report.html">
+            Слайдер відеоматеріалів
+        </div>
+        <div class="side_menu_button" data-filename="lab5/report/social_report.html">
+            Кнопки соціальних мереж
+        </div>
+        <div class="side_menu_button" data-filename="lab5/report/informers_report.html">
+            Інформери
+        </div>
+        <div class="side_menu_button" data-filename="lab5/report/conclusion.html">
+            Висновки
+        </div>
+
     </div>
     <div id="content" class="show_field">
 
