--- a/lab5/report/conclusion.html
+++ b/lab5/report/conclusion.html
@@ -9,5 +9,17 @@
 <p>
     В цій лабораторній роботі ми навчилися працювати з бібліотеками. Зокрема з бібліотекою jQueryUI.
 </p>
+<p>
+    Використовували jQueryUI такі віджети: menu, slider.
+</p>
+<p>
+    Використовували UniteGallery для фотогалереї та відео та фото слайдера.
+</p>
+<p>
+    Використовували плагін shared для вставки посилань на соціальні мережі.
+</p>
+<p>
+    Використовували плагін covervid для створення фонового відео.
+</p>
 </body>
 </html>
