--- a/lab5/report/dynamic_3.html
+++ b/lab5/report/dynamic_3.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Динамічні елементи 3 пункту</h3>
 <h2>Меню</h2>
-<a href="./lab5/menu.html">До сторінки</a>
+<a href="./lab5/menu.html">До сторінки ./lab5/menu.html</a>
 <img src="./lab5/report_images/menu_screen.png" style="width: 50%">
 <pre>
 <code>
