--- a/lab5/report/goal_lab5.html
+++ b/lab5/report/goal_lab5.html
@@ -11,7 +11,7 @@
 </p>
 <h3>Постановка задачі</h3>
 <p>
-    Ознайомитися з теоретичними відомостями до лабораторної роботи №5 ( бібліотека jQuery UI). Теоретичні відомості надані у даному файлі стор.6 (прогорнути) 
+    Ознайомитися з теоретичними відомостями до лабораторної роботи №5 ( бібліотека jQuery UI). Теоретичні відомості надані у даному файлі стор.6
 </p>
 <p>
     Відкрити власний сайт або створити окремо WEB-строрінку, якщо елементи не заплановано використовувати у власній программі( сайті).
@@ -23,13 +23,13 @@
     Menu – випадне меню. <br>
     Slider - вибір числа за допомогою повзунка. <br>
     Tabs - організація вкладок на сторінці. <br>
-    Tooltip - організація спливаючих підказок. <br>
+    Tooltip - організація спливаючих підказок.<br>
 </p>
 <p>
     Додати до  сайту (або до окремої  сторінки) плагін галереї UniteGallery. Створити за допомогою бібліотеки: <br>
     фотогалерею з можливістю перегляду збільшених зображень <br>
     слайдер фотографій <br>
-    слайдер відеоматеріалів <br> 
+    слайдер відеоматеріалів<br> 
 </p>
 <p>
     Додати до сайту (або до окремої  сторінки) кнопки соціальних мереж: Facebook, Twitter, Instagram, Pinterest.
