--- a/lab5/report/informers_report.html
+++ b/lab5/report/informers_report.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Інформери</h3>
 <img src="./lab5/report_images/informers_screen.png" style="width: 50%;"> <br>
-<a href="./lab5/6Task.html">До сторінки</a>
+<a href="./lab5/6Task.html">До сторінки ./lab5/6Task.html</a>
 <pre>
 <code>
 &lt;!DOCTYPE html&gt;
