--- a/lab5/report/photo_gallery_report.html
+++ b/lab5/report/photo_gallery_report.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Фото галерея</h3>
 <img src="./lab5/report_images/photo_gallery_screen.png" style="width: 50%"> <br>
-<a href="./lab5/photo_gallery.html">До сторінки</a>
+<a href="./lab5/photo_gallery.html">До сторінки ./lab5/photo_gallery.html</a>
 <pre>
 <code>
 &lt;!DOCTYPE html&gt;
