--- a/lab5/report/photo_slider_report.html
+++ b/lab5/report/photo_slider_report.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Слайдер фотографій</h3>
 <img src="./lab5/report_images/photo_slider_screen.png" style="width: 50%"> <br>
-<a href="./lab5/photo_slider.html">До сторінки</a>
+<a href="./lab5/photo_slider.html">До сторінки ./lab5/photo_slider.html</a>
 <pre>
 <code>
 &lt;!DOCTYPE html&gt;
