--- a/lab5/report/social_report.html
+++ b/lab5/report/social_report.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Кнопки соціальних мереж</h3>
 <img src="./lab5/report_images/social_screen.png" style="width: 50%"> <br>
-<a href="./lab5/5Task.html">До сторінки</a>
+<a href="./lab5/5Task.html">До сторінки ./lab5/5Task.html</a>
 <pre>
 <code>
 &lt;!DOCTYPE html&gt;
