--- a/lab5/report/video_slider_report.html
+++ b/lab5/report/video_slider_report.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Слайдер відеоматеріалів</h3>
 <img src="./lab5/report_images/video_slider_screen.png" style="width: 50%"> <br>
-<a href="./lab5/video_slider.html">До сторінки</a>
+<a href="./lab5/video_slider.html">До сторінки ./lab5/video_slider.html</a>
 <pre>
 <code>
 &lt;!DOCTYPE html&gt;
