--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div class="upper_menu_button" data-menu="lab5">
         Лабораторна робота №5
     </div>
+    <div class="upper_menu_button" data-menu="lab6">
+        Лабораторна робота №6
+    </div>
 </div>
 <div class="wrapper">
     <div id="side_menu_lab1" class="side_menu side_menu--active">
@@ -146,6 +149,20 @@
             Висновки
         </div>
 
+    </div>
+    <div id="side_menu_lab6" class="side_menu">
+        <div class="side_menu_button" data-filename="lab6/goal_lab6.html">
+            Тема та постановка задачі лабораторної роботи №6
+        </div>
+        <div class="side_menu_button" data-filename="lab6/dynamic.html">
+            Динамічні елементи
+        </div>
+        <div class="side_menu_button" data-filename="lab6/response.html">
+            Відповідь від сервера
+        </div>
+        <div class="side_menu_button" data-filename="lab6/conclusion.html">
+            Висновки
+        </div>
     </div>
     <div id="content" class="show_field">
 
