--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="upper_menu_button" data-menu="lab6">
         Лабораторна робота №6
     </div>
+    <div class="upper_menu_button" data-menu="lab7">
+        Лабораторна робота №7
+    </div>
 </div>
 <div class="wrapper">
     <div id="side_menu_lab1" class="side_menu side_menu--active">
@@ -157,10 +160,36 @@
         <div class="side_menu_button" data-filename="lab6/dynamic.html">
             Динамічні елементи
         </div>
+        <div class="side_menu_button" data-filename="lab6/setup_server.html">
+            Налаштування сервера
+        </div>
         <div class="side_menu_button" data-filename="lab6/response.html">
             Відповідь від сервера
         </div>
         <div class="side_menu_button" data-filename="lab6/conclusion.html">
+            Висновки
+        </div>
+    </div>
+    <div id="side_menu_lab7" class="side_menu">
+        <div class="side_menu_button" data-filename="lab7/goal_lab7.html">
+            Тема та постановка задачі лабораторної роботи №7
+        </div>
+        <div class="side_menu_button" data-filename="lab7/info_model.html">
+            Інфологічна модель
+        </div>
+        <div class="side_menu_button" data-filename="lab7/data_model.html">
+            Даталогічна модель
+        </div>
+        <div class="side_menu_button" data-filename="lab7/physical.html">
+            Фізична реалізація
+        </div>
+        <div class="side_menu_button" data-filename="lab7/scripts_php.html">
+            Скрипти PHP
+        </div>
+        <div class="side_menu_button" data-filename="lab7/use.html">
+            Використання
+        </div>
+        <div class="side_menu_button" data-filename="lab7/conclusion.html">
             Висновки
         </div>
     </div>
