--- a/lab7/data_model.html
+++ b/lab7/data_model.html
@@ -6,6 +6,17 @@
 </head>
 <body>
 <h3>Даталогічна модель</h3>
+<p>Щоб отримати даталогічну модель - треба нормалізувати відношення інфологічної моделі</p>
+<p><b>Означення НФ1</b>(нормальної форми) - відношення знаходиться у першій нормальній формі, коли на перетині рядка і стовпця відношення лежить лише одне значення атрибуту</p>
+<p>Ця умова виконується в нашій інфологічній моделі.</p>
+<p><b>Означення НФ2</b> – відношення знаходиться у 2НФ, коли воно знаходиться у 1НФ та відсутні часткові функціональні залежності між неключовими атрибутами та частиною складеного первинного ключа.</p>
+<p>Наша модель виконує цю вимогу, оскільки ключі в сутностях не мають логічної прив'язки до елементу сутності</p>
+<p><b>Означення НФ3</b> - відношення знаходиться у 3НФ, коли воно знаходиться у 2НФ та відсутні транзитивні залежності між неключовими атрибутами.</p>
+<p>В жодній сутності немає атрибутів, які залежать один від одного</p>
+
+<p>Отже маємо модель в 3 нормальній формі</p>
+
+<h4>Даталогічна модель</h4>
 <img src="./lab7/images/data.jpeg" style="width: 50%">
 </body>
 </html>
