--- a/lab7/info_model.html
+++ b/lab7/info_model.html
@@ -6,6 +6,16 @@
 </head>
 <body>
 <h3>Інфологічна модель</h3>
+<p>Опис сутностей та їх атрибутів</p>
+
+<img src="./lab7/images/info_table_1_1.png" style="width: 50%"> <br>
+<img src="./lab7/images/info_table_1_2.png" style="width: 50%"> <br>
+
+<p>Опис та класифікація зв'язків</p>
+
+<img src="./lab7/images/info_table_2.png" style="width: 50%"> <br>
+
+<p>Інфологічна модель</p>
 <img src="./lab7/images/info.jpeg" style="width: 50%">
 </body>
 </html>
