--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="upper_menu_button" data-menu="lab7">
         Лабораторна робота №7
     </div>
+    <div class="upper_menu_button" data-menu="lab8">
+        Лабораторна робота №8
+    </div>
 </div>
 <div class="wrapper">
     <div id="side_menu_lab1" class="side_menu side_menu--active">
@@ -190,6 +193,29 @@
             Використання
         </div>
         <div class="side_menu_button" data-filename="lab7/conclusion.html">
+            Висновки
+        </div>
+    </div>
+    <div id="side_menu_lab8" class="side_menu">
+        <div class="side_menu_button" data-filename="lab8/goal_lab8.html">
+            Тема та постановка задачі лабораторної роботи №8
+        </div>
+        <div class="side_menu_button" data-filename="lab7/info_model.html">
+            Інфологічна модель
+        </div>
+        <div class="side_menu_button" data-filename="lab7/data_model.html">
+            Даталогічна модель
+        </div>
+        <div class="side_menu_button" data-filename="lab8/sql_scripts.html">
+            SQL-запити до БД
+        </div>
+        <div class="side_menu_button" data-filename="lab8/auth.html">
+            Авторизація
+        </div>
+        <div class="side_menu_button" data-filename="lab8/lang_select.html">
+            Вибір мов
+        </div>
+        <div class="side_menu_button" data-filename="lab8/conclusion.html">
             Висновки
         </div>
     </div>
