--- a/lab6/setup_server.html
+++ b/lab6/setup_server.html
@@ -11,7 +11,7 @@
 </h4>
 <p>
     Njinx <br>
-    Налаштував сервер в контейнері Docker, вказав в файлі docker-compose.yml посилання на образ nginx i php7, вказав порти на які контейнер виводить запити та "прокинув" файли в контейнер (вказав звідки контейнеру брати файли)<br>
+    Налаштував сервер в контейнері Docker, вказав в файлі docker-compose.yml посилання на образ nginx i php7, вказав порти на які контейнер виводить запити (80:80) та "прокинув" файли в контейнер (вказав звідки контейнеру брати файли)<br>
 </p>
 <pre>
 <code>
