--- a/lab8/auth.html
+++ b/lab8/auth.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Авторизація</title>
 </head>
 <body>
-
+<h3>Авторизація</h3>
+<h4>Код PHP</h4>
+<img src="./lab8/images/login1.png" style="width: 50%"> <br>
+<img src="./lab8/images/login2.png" style="width: 50%"> <br>
+<h4>Форма HTML</h4>
+<img src="./lab8/images/login3.png" style="width: 50%"> <br>
+<h4>Форма на сторінці</h4>
+<img src="./lab8/images/login4.png" style="width: 50%"> <br>
 </body>
 </html>
