--- a/lab8/conclusion.html
+++ b/lab8/conclusion.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Висновки</title>
 </head>
 <body>
-
+<h3>Висновки</h3>
+<p>
+    В цій лабораторній роботі ми створили базу даних для власного проекту. Написали скрипти SQL запитів та реалізували їх виконання. Використовували cookie та session.
+</p>
 </body>
 </html>
