--- a/lab8/lang_select.html
+++ b/lab8/lang_select.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Вибір мов</title>
 </head>
 <body>
-
+<h3>Вибір мов</h3>
+<h4>Код PHP</h4>
+<img src="./lab8/images/lang1.png" style="width: 50%"> <br>
+<h4>Кнопки на сторінці</h4>
+<img src="./lab8/images/lang2.png" style="width: 50%"> <br>
+<h4>Результат виводу</h4>
+<img src="./lab8/images/lang3.png" style="width: 50%"> <br>
 </body>
 </html>
