--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <div class="upper_menu_button" data-menu="lab8">
         Лабораторна робота №8
     </div>
+    <div class="upper_menu_button" data-menu="lab9">
+        Лабораторна робота №9
+    </div>
 </div>
 <div class="wrapper">
     <div id="side_menu_lab1" class="side_menu side_menu--active">
@@ -216,6 +219,27 @@
             Вибір мов
         </div>
         <div class="side_menu_button" data-filename="lab8/conclusion.html">
+            Висновки
+        </div>
+    </div>
+    <div id="side_menu_lab9" class="side_menu">
+        <div class="side_menu_button" data-filename="lab9/goal_lab9.html">
+            Тема та постановка задачі лабораторної роботи №9
+        </div>
+        <div class="side_menu_button" data-filename="lab9/second_task.html">
+            Виконання 2 пункту
+        </div>
+        <div class="side_menu_button" data-filename="lab9/ajax_site.html">
+            Ajax-запити у власному сайті
+        </div>
+        <div class="side_menu_button" data-filename="lab9/full_func.html">
+            Повний список функціоналу програми
+        </div>
+        <div class="side_menu_button" data-filename="lab9/comparison.html">
+            Порівняння функціоналу першої та дев'ятої лабораторних робіт
+        </div>
+
+        <div class="side_menu_button" data-filename="lab9/conclusion.html">
             Висновки
         </div>
     </div>
